fix footer z-index issue

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -6,6 +6,9 @@ h1,
 button {
     font-family: 'Nunito', sans-serif;
 }
+.main_content{
+    margin-bottom: 100px;
+}
 
 .fade-enter-active,
 .fade-leave-active {
@@ -24,10 +27,6 @@ button {
     margin: 1em auto;
     overflow: auto;
    
-}
-
-.tasks__list {
-    clear: both;
 }
 
 .tasks__item {
@@ -66,6 +65,7 @@ button {
     background-color: #cad7e7f5;
     color: white;
     text-align: center;
+    z-index: 999;
 }
 .fz-12{
     font-size: 12px;
